# lambda_os

./: Cargo.toml
.cargo/: config
docs/: introduction.md
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  qemu.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  stack_overflow_test.rs  vga_test.rs
